vlib/v/checker/tests/generics_struct_infer_err.vv
struct Foo[T, U] {
	a T
	b U
}

fn main() {
	st11 := Foo{
		a: 'two'
	}
	println(st11)
}
